ui: fix align of .grandSubEntries elements

--- a/cmd/forge/tmpl/entry.bml.css
+++ b/cmd/forge/tmpl/entry.bml.css
@@ -1064,7 +1064,7 @@
 	gap: 0.1rem;
 	margin: 0.3rem 0.1rem 0.1rem 0.1rem;
 	flex-wrap: wrap;
-	align-items: baseline;
+	align-items: center;
 }
 
 .subEntryArea:not(.editMode) .summaryDot.grandSubAdderLoader {
